finishes nutrition facts

--- a/IntermediateExercise/nutritionFacts.html
+++ b/IntermediateExercise/nutritionFacts.html
@@ -8,14 +8,14 @@
 <body>
 	<div id="content">
 		
-		<div id="one">
+		<div>
 			<h1>Nutrition Facts</h1>
 			<p>Serving Size 1 cup (50g)</p>
 			<p>Servings Per Container 10</p>
 			<hr class="lineFat">
 		</div>
 
-		<div id="two" class="parts">
+		<div class="parts">
 			<span class="wide">Amount Per Serving</span>
 
 			<div class="innerBoxRight">
@@ -25,7 +25,7 @@
 		</div>
 		<hr class="lineNormal">
 
-		<div id="three" class="parts">
+		<div class="parts">
 			<span class="wide">Calories</span>
 
 			<div class="innerBoxRight">
@@ -36,7 +36,7 @@
 
 		<hr class="lineGrey indented">
 
-		<div id="four" class="parts">
+		<div class="parts">
 			<span class="wide indented">Calories from Fat</span>
 
 			<div class="innerBoxRight">
@@ -56,6 +56,284 @@
 			</div>
 		</div>
 
+		<hr class="lineNormal">
+
+		<div class="parts">
+			<span class="wide">Total Fat 4g*</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">6%</span>
+				<span class="narrow">8%</span>
+			</div>
+		</div>
+
+		<hr class="lineNormal indented">
+
+		<div class="parts">
+			<span class="wide indented">Saturated Fat 1.5g</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">8%</span>
+				<span class="narrow">13%</span>
+			</div>
+		</div>
+
+		<hr class="lineGrey indented">
+
+		<div class="parts">
+			<span class="wide indented">Trans Fat 0g</span>
+		</div>
+
+		<hr class="lineNormal">
+
+		<div class="parts">
+			<span class="wide">Cholesterol 0mg</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">0%</span>
+				<span class="narrow">3%</span>
+			</div>
+		</div>
+
+		<hr class="lineGrey">
+
+		<div class="parts">
+			<span class="wide">Sodium 190mg</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">8%</span>
+				<span class="narrow">11%</span>
+			</div>
+		</div>
+
+		<hr class="lineNormal">
+
+		<div class="parts">
+			<span class="wide">Total Carbohydrate 39g</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">13%</span>
+				<span class="narrow">15%</span>
+			</div>
+		</div>
+
+		<hr class="indented lineNormal">
+
+		<div class="parts">
+			<span class="wide indented">Dietary Fiber 6g</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">24%</span>
+				<span class="narrow">24%</span>
+			</div>
+		</div>
+
+		<hr class="lineGrey indented">
+
+		<div class="parts">
+			<span class="wide indented">Sugars 11g</span>
+		</div>
+
+		<hr class="lineNormal">
+
+		<div class="parts">
+			<span class="wide">Protein 4g</span>
+		</div>
+
+		<hr class="lineFat">
+
+		<div class="parts">
+			<span class="wide">Vitamin A</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">0%</span>
+				<span class="narrow">6%</span>
+			</div>
+		</div>
+
+		<hr class="lineGrey">
+
+		<div class="parts">
+			<span class="wide">Vitamin C</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">0%</span>
+				<span class="narrow">2%</span>
+			</div>
+		</div>
+
+		<hr class="lineGrey">
+
+		<div class="parts">
+			<span class="wide">Calcium</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">2%</span>
+				<span class="narrow">15%</span>
+			</div>
+		</div>
+
+		<hr class="lineGrey">
+
+		<div class="parts">
+			<span class="wide">Iron</span>
+
+			<div class="innerBoxRight">
+				<span class="narrow">6%</span>
+				<span class="narrow">6%</span>
+			</div>
+		</div>
+
+		<hr class="lineNormal">
+
+		<div class="finePrint">
+			
+			<div class="parts">
+				<span class="wide">*Amount in Cereal. with 1/2 cup % milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1 g Saturated Fat), 10mg Cholesterol, 70 mg Sodium, 7 g Total Carbohydrate (6 g Sugars), 5 g Protein.<br>**Percent Daily Values are based on a 2,000 calorie diet. Your daily values may be higher or lower depending on your calorie needs:</span>
+			</div>
+
+			<div class="parts">
+				<div class="bottom">
+					<span></span>
+				</div>
+
+				<div class="bottom">
+					<span>Calories:</span>
+				</div>
+
+				<div class="bottom">
+					<span>2,000</span>
+				</div>
+
+				<div class="bottom">
+					<span>2,500</span>
+				</div>
+			</div>
+
+			<hr class="lineGrey">
+
+			<div class="parts">
+				<div class="bottom">
+					<span>Total Fat</span>
+				</div>
+
+				<div class="bottom">
+					<span>Less than</span>
+				</div>
+
+				<div class="bottom">
+					<span>65g</span>
+				</div>
+
+				<div class="bottom">
+					<span>80g</span>
+				</div>
+			</div>
+
+			<div class="parts">
+				<div class="bottom">
+					<span class="padIndent">Saturated Fat</span>
+				</div>
+
+				<div class="bottom">
+					<span>Less than</span>
+				</div>
+
+				<div class="bottom">
+					<span>20g</span>
+				</div>
+
+				<div class="bottom">
+					<span>25g</span>
+				</div>
+			</div>
+
+			<div class="parts">
+				<div class="bottom">
+					<span>Cholesterol</span>
+				</div>
+
+				<div class="bottom">
+					<span>Less than</span>
+				</div>
+
+				<div class="bottom">
+					<span>300mg</span>
+				</div>
+
+				<div class="bottom">
+					<span>300mg</span>
+				</div>
+			</div>
+
+			<div class="parts">
+				<div class="bottom">
+					<span>Sodium</span>
+				</div>
+
+				<div class="bottom">
+					<span>Less than</span>
+				</div>
+
+				<div class="bottom">
+					<span>2,400mg</span>
+				</div>
+
+				<div class="bottom">
+					<span>2,400mg</span>
+				</div>
+			</div>
+
+			<div class="parts">
+				<div class="bottom">
+					<span>Total Carbohydrate</span>
+				</div>
+
+				<div class="bottom">
+					<span></span>
+				</div>
+
+				<div class="bottom">
+					<span>300g</span>
+				</div>
+
+				<div class="bottom">
+					<span>375g</span>
+				</div>
+			</div>
+
+			<div class="parts">
+				<div class="bottom">
+					<span class="padIndent">Dietary Fiber</span>
+				</div>
+
+				<div class="bottom">
+					<span></span>
+				</div>
+
+				<div class="bottom">
+					<span>25g</span>
+				</div>
+
+				<div class="bottom">
+					<span>30g</span>
+				</div>
+			</div>
+
+			<hr class="lineGrey">
+
+			<div class="parts">
+				<span>Calories per gram:</span>
+			</div>
+
+			<div id="footer" class="parts">
+				<span class="footerSpacing">Fat 9</span>
+				<span class="footerSpacing">&#8226;</span>
+				<span class="footerSpacing">Carbohydrate 4</span>
+				<span class="footerSpacing">&#8226;</span>
+				<span class="footerSpacing">Protein 4</span>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
