Nutrition table completed

--- a/IntermediateExercise/nutritionFacts.html
+++ b/IntermediateExercise/nutritionFacts.html
@@ -9,24 +9,24 @@
 	<div id="content">
 		
 		<div>
-			<h1>Nutrition Facts</h1>
+			<h1 class="bold">Nutrition Facts</h1>
 			<p>Serving Size 1 cup (50g)</p>
 			<p>Servings Per Container 10</p>
 			<hr class="lineFat">
 		</div>
 
 		<div class="parts">
-			<span class="wide">Amount Per Serving</span>
+			<span class="wide bold finePrint">Amount Per Serving</span>
 
 			<div class="innerBoxRight">
-				<span class="narrow">Cereal</span>
-				<span class="narrow">with 1/2 cup 1% milk</span>
+				<span class="narrow bold finePrint">Cereal</span>
+				<span class="narrow bold finePrint">with 1/2 cup 1% milk</span>
 			</div>
 		</div>
 		<hr class="lineNormal">
 
 		<div class="parts">
-			<span class="wide">Calories</span>
+			<span class="wide bold">Calories</span>
 
 			<div class="innerBoxRight">
 				<span class="narrow">190</span>
@@ -51,7 +51,7 @@
 			<div>
 				
 			</div>
-			<div class="innerBoxRight">
+			<div class="innerBoxRight bold finePrint">
 				<span>% Daily Value**</span>
 			</div>
 		</div>
@@ -59,7 +59,7 @@
 		<hr class="lineNormal">
 
 		<div class="parts">
-			<span class="wide">Total Fat 4g*</span>
+			<span class="wide bold">Total Fat 4g*</span>
 
 			<div class="innerBoxRight">
 				<span class="narrow">6%</span>
@@ -87,7 +87,7 @@
 		<hr class="lineNormal">
 
 		<div class="parts">
-			<span class="wide">Cholesterol 0mg</span>
+			<span class="wide bold">Cholesterol 0mg</span>
 
 			<div class="innerBoxRight">
 				<span class="narrow">0%</span>
@@ -98,7 +98,7 @@
 		<hr class="lineGrey">
 
 		<div class="parts">
-			<span class="wide">Sodium 190mg</span>
+			<span class="wide bold">Sodium 190mg</span>
 
 			<div class="innerBoxRight">
 				<span class="narrow">8%</span>
@@ -109,7 +109,7 @@
 		<hr class="lineNormal">
 
 		<div class="parts">
-			<span class="wide">Total Carbohydrate 39g</span>
+			<span class="wide bold">Total Carbohydrate 39g</span>
 
 			<div class="innerBoxRight">
 				<span class="narrow">13%</span>
@@ -137,7 +137,7 @@
 		<hr class="lineNormal">
 
 		<div class="parts">
-			<span class="wide">Protein 4g</span>
+			<span class="wide bold">Protein 4g</span>
 		</div>
 
 		<hr class="lineFat">
@@ -193,130 +193,143 @@
 			</div>
 
 			<div class="parts">
-				<div class="bottom">
+				<div>
 					<span></span>
 				</div>
+				<div class="newDiv">
+					<div class="bottom">
+						<span>Calories:</span>
+					</div>
 
-				<div class="bottom">
-					<span>Calories:</span>
-				</div>
+					<div class="bottom">
+						<span>2,000</span>
+					</div>
 
-				<div class="bottom">
-					<span>2,000</span>
-				</div>
-
-				<div class="bottom">
-					<span>2,500</span>
+					<div class="bottom">
+						<span>2,500</span>
+					</div>
 				</div>
 			</div>
 
 			<hr class="lineGrey">
 
 			<div class="parts">
-				<div class="bottom">
+				
+				<div>
 					<span>Total Fat</span>
 				</div>
 
-				<div class="bottom">
-					<span>Less than</span>
-				</div>
+				<div class="newDiv">
+					<div class="bottom">
+						<span>Less than</span>
+					</div>
 
-				<div class="bottom">
-					<span>65g</span>
-				</div>
+					<div class="bottom">
+						<span>65g</span>
+					</div>
 
-				<div class="bottom">
-					<span>80g</span>
+					<div class="bottom">
+						<span>80g</span>
+					</div>
 				</div>
 			</div>
 
 			<div class="parts">
-				<div class="bottom">
+				<div>
 					<span class="padIndent">Saturated Fat</span>
 				</div>
+				<div class="newDiv">
 
-				<div class="bottom">
-					<span>Less than</span>
-				</div>
+					<div class="bottom">
+						<span>Less than</span>
+					</div>
 
-				<div class="bottom">
-					<span>20g</span>
-				</div>
+					<div class="bottom">
+						<span>20g</span>
+					</div>
 
-				<div class="bottom">
-					<span>25g</span>
+					<div class="bottom">
+						<span>25g</span>
+					</div>
 				</div>
 			</div>
 
 			<div class="parts">
-				<div class="bottom">
+				<div>
 					<span>Cholesterol</span>
 				</div>
 
-				<div class="bottom">
-					<span>Less than</span>
-				</div>
+				<div class="newDiv">
+					<div class="bottom">
+						<span>Less than</span>
+					</div>
 
-				<div class="bottom">
-					<span>300mg</span>
-				</div>
+					<div class="bottom">
+						<span>300mg</span>
+					</div>
 
-				<div class="bottom">
-					<span>300mg</span>
+					<div class="bottom">
+						<span>300mg</span>
+					</div>
 				</div>
 			</div>
 
 			<div class="parts">
-				<div class="bottom">
+				<div>
 					<span>Sodium</span>
 				</div>
+				<div class="newDiv">
+					<div class="bottom">
+						<span>Less than</span>
+					</div>
 
-				<div class="bottom">
-					<span>Less than</span>
-				</div>
+					<div class="bottom">
+						<span>2,400mg</span>
+					</div>
 
-				<div class="bottom">
-					<span>2,400mg</span>
-				</div>
-
-				<div class="bottom">
-					<span>2,400mg</span>
+					<div class="bottom">
+						<span>2,400mg</span>
+					</div>
 				</div>
 			</div>
 
 			<div class="parts">
-				<div class="bottom">
+				<div>
 					<span>Total Carbohydrate</span>
 				</div>
 
-				<div class="bottom">
-					<span></span>
-				</div>
+				<div class="newDiv">
+					<div class="bottom">
+						<span></span>
+					</div>
 
-				<div class="bottom">
-					<span>300g</span>
-				</div>
+					<div class="bottom">
+						<span>300g</span>
+					</div>
 
-				<div class="bottom">
-					<span>375g</span>
+					<div class="bottom">
+						<span>375g</span>
+					</div>
 				</div>
 			</div>
 
 			<div class="parts">
-				<div class="bottom">
+				<div>
 					<span class="padIndent">Dietary Fiber</span>
 				</div>
 
-				<div class="bottom">
-					<span></span>
-				</div>
+				<div class="newDiv">
+					<div class="bottom">
+						<span></span>
+					</div>
 
-				<div class="bottom">
-					<span>25g</span>
-				</div>
+					<div class="bottom">
+						<span>25g</span>
+					</div>
 
-				<div class="bottom">
-					<span>30g</span>
+					<div class="bottom">
+						<span>30g</span>
+					</div>
 				</div>
 			</div>
 
